# decuen

./: .coveragerc  .prospector.yml  .travis.yml  LICENSE  README.md  pytest.ini  setup.cfg  setup.py  tox.ini
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: algorithm-bug-report.md  algorithm-implementation-bug-report.md  algorithm-implementation-feature-request.md  framework-bug-report.md  framework-feature-request.md
.github/workflows/: pythonapp.yml
decuen/: __init__.py  _structs.py  policy.py  structs.py
decuen/actors/: __init__.py  _actor.py  pg.py  strategy.py
decuen/actors/strats/: __init__.py  _strategy.py  boltzmann.py  epsilon.py  greedy.py  uniform.py
decuen/agents/: __init__.py  _agent.py  ac.py  actor.py  agent.py  critic.py  dqn.py  q.py  qtable.py  rand.py  random.py
decuen/critics/: __init__.py  _critic.py  _q.py  dqn.py  montecarlo.py  q.py  qtable.py  v.py
decuen/dists/: __init__.py  _distribution.py
decuen/memories/: __init__.py  _memory.py  memory.py  short_term.py  uniform.py  void.py
decuen/policies/: __init__.py  _policy.py  policy.py  rand.py
decuen/strategies/: __init__.py  _strategy.py  boltzmann.py  epsilon.py  greedy.py  rand.py
decuen/structs/: __init__.py  action.py  experience.py  state.py  tensor.py  trajectory.py  transition.py
decuen/utils/: __init__.py  checks.py  context.py  function_property.py  module_construction.py
tests/: test_sanity.py
