[metadata]
name = decuen
version = 0.0.0

author = Ziyad Edher
author-email = ziyad.edher@gmail.com

home-page = https://github.com/ziyadedher/decuen
description = Reinforcement learning framework built in modern Python for experimentation, ease-of-use, modularity, and extensibility.
long-description = file: README.md, LICENSE

license = MIT
license-file = LICENSE

platform = any
classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3 :: Only
  License :: OSI Approved :: MIT License
  Typing :: Typed

[options]
packages = decuen
zip_safe = false
include_package_data = true

python_requires =
  >= 3.7
install_requires =
  gym[all]
  tensorflow-gpu

[options.extras_require]
lint =
  prospector[with_everything]
  mypy==0.720  # mypy >= 0.730 incompatible with prospector (https://github.com/PyCQA/prospector/issues/345)
test =
  tox
  tox-travis
  pytest
  pytest-cov
  hypothesis

[bdist_wheel]
universal = true
