[metadata]
name = decuen
version = 0.0.5
url = https://github.com/ziyadedher/decuen
download_url = https://github.com/ziyadedher/decuen/tags

author = Ziyad Edher
author-email = ziyad.edher@gmail.com

home-page = https://github.com/ziyadedher/decuen
description = Reinforcement learning framework built in modern Python for experimentation, ease-of-use, modularity, and extensibility.
long_description = file: README.md
long_description_content_type = text/markdown

license = MIT
license_file = LICENSE

platform = any
classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3 :: Only
  License :: OSI Approved :: MIT License
  Typing :: Typed

[options]
packages = find:
zip_safe = false
include_package_data = true

python_requires =
  >= 3.7
install_requires =
  gym[atari, box2d, classic_control]
  torch

[options.extras_require]
lint =
  prospector[with_everything]
test =
  tox
mujoco =
  gym[mujoco, robotics]
